# kaoyan-agent

./: .env.example  .gitignore  .npmrc  AGENTS.md  DESKTOP_YOLO_CAMERA_HANDOFF.md  README.md  app.py  check_memory.py  config.py  desktop_runtime.js  docker-compose.neo4j.yml  fortune_page.py  index.js  package-lock.json  package.json  preinstall.js  pyproject.toml  requirements.txt  review_page.py  taskD_focus.patch  taskD_log.txt  tree_4层.txt  目录树.txt  问题.md
agents/: chat_agent.py  checkpoint_agent.py  intervention_agent.py  mistake_review_agent.py  motivation.py  nightly_memory_agent.py  problem_discovery_agent.py  query_rewriter.py  review_generator.py  review_grader.py  score_analyzer.py  score_predictor.py
components/: fortune_card.py  minigames.py  review_panel.py  score_trend_panel.py  task_panel.py
db/: __init__.py  connection.py  database.py  migrations.py  schema.sql
docs/: AGENTS.md  ARCHITECTURE.md  PROJECT_CONTEXT.md  ROADMAP.md  (+12 more)
streamlit/: README.md  app.py  main.py  pyproject.toml
streamlit/src/kaoyan_agent/: __init__.py
streamlit/src/kaoyan_agent/agents/: __init__.py  chat_tools.py
streamlit/src/kaoyan_agent/core/: paths.py  settings.py
streamlit/src/kaoyan_agent/memory/: __init__.py  gates.py
streamlit/src/kaoyan_agent/prompts/: prompt_registry.py
streamlit/src/kaoyan_agent/repositories/: agent_trace.py  fortune_repository.py  nightly_review_repository.py  online_actions.py  pending_actions.py  project_repository.py  raw_events.py  skill_memory_repository.py  study_task_repository.py  supervision_repository.py
streamlit/src/kaoyan_agent/schemas/: online_actions.py  study_task.py
streamlit/src/kaoyan_agent/services/: focus_temporal_tracker.py  local_yolo_focus_recognizer.py  vector_store.py
streamlit/src/kaoyan_agent/ui/: chat_page.py  memories.py  motivation.py  problem_board.py  problem_board_page.py  shared.py
streamlit/src/kaoyan_agent/ui/components/: common.py  fortune_card.py  memory_panel.py  mistake_review_panel.py  pomodoro_supervision_panel.py  problem_board_panel.py  score_trend_panel.py  task_panel.py
streamlit/src/kaoyan_agent/vision/: __init__.py
streamlit/src/kaoyan_agent/workflows/: context_builder.py
streamlit/tests/: test_contracts.py  test_database_compatibility.py  test_focus_supervision.py  test_memory_system_redesign.py  test_nightly_memory_chain.py
(+158 files in other folders)
