[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaoyan-agent"
version = "0.1.0"
description = "Problem discovery and adaptive intervention agent for kaoyan preparation."
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.32",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "pydantic>=2",
  "langchain>=1.0",
  "langchain-deepseek>=0.1",
  "langchain-openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kaoyan_agent.db" = ["schema.sql"]
