[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaoyan-agent"
version = "0.1.0"
description = "Problem discovery and adaptive intervention agent for kaoyan preparation."
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.32",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "pydantic>=2",
  "langchain>=1.0",
  "langchain-core>=1.0",
  "langchain-deepseek>=0.1",
  "langchain-openai>=1.0",
  "chromadb>=0.5",
  "neo4j>=5.20",
  "streamlit-webrtc>=0.47",
  "opencv-python==4.11.0.86",
  "opencv-contrib-python==4.11.0.86",
  "Pillow>=10",
  "ultralytics>=8.3",
  "mediapipe==0.10.21; python_version < '3.13'",
  "pyinstaller>=6.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.package-data]
"kaoyan_agent.db" = ["schema.sql"]
